test/should-fail/no-such-keyword-klass/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

int-t main()
{
  object-t o = $alloc(klass::klass);
  $init(o, bogus : 42);
  USE(o);
  //  make(klass::klass, bogus : 42);
  return 0;
}
